--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "devDependencies": {
     "conventional-changelog": "0.0.17",
+    "del": "^1.2.0",
     "gulp": "^3.9.0",
     "gulp-bump": "^0.3.1",
+    "gulp-copy": "0.0.2",
     "gulp-filter": "^2.0.2",
     "gulp-gh-pages": "^0.5.2",
     "gulp-git": "^1.2.4",
