--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "creature-threejs",
-  "version": "1.0.0",
+  "version": "1.0.1-RC.0",
   "description": "Creature and THREE.js integration",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
